user/transaction: add new contact on payment or transfer (#155)